; ModuleID = '/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_interval.c_abs_interval.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/btree_gist/extr_btree_interval.c_abs_interval.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32, i32 }

@abs_interval.zero = internal global %struct.TYPE_6__ zeroinitializer, align 4
@interval_lt = common dso_local global i32 0, align 4
@interval_um = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_6__* @abs_interval(%struct.TYPE_6__* %0) #0 {
  %2 = alloca %struct.TYPE_6__*, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %2, align 8
  %3 = load i32, i32* @interval_lt, align 4
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %5 = call i32 @IntervalPGetDatum(%struct.TYPE_6__* %4)
  %6 = call i32 @IntervalPGetDatum(%struct.TYPE_6__* @abs_interval.zero)
  %7 = call i32 @DirectFunctionCall2(i32 %3, i32 %5, i32 %6)
  %8 = call i64 @DatumGetBool(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load i32, i32* @interval_um, align 4
  %12 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  %13 = call i32 @IntervalPGetDatum(%struct.TYPE_6__* %12)
  %14 = call i32 @DirectFunctionCall1(i32 %11, i32 %13)
  %15 = call %struct.TYPE_6__* @DatumGetIntervalP(i32 %14)
  store %struct.TYPE_6__* %15, %struct.TYPE_6__** %2, align 8
  br label %16

16:                                               ; preds = %10, %1
  %17 = load %struct.TYPE_6__*, %struct.TYPE_6__** %2, align 8
  ret %struct.TYPE_6__* %17
}

declare dso_local i64 @DatumGetBool(i32) #1

declare dso_local i32 @DirectFunctionCall2(i32, i32, i32) #1

declare dso_local i32 @IntervalPGetDatum(%struct.TYPE_6__*) #1

declare dso_local %struct.TYPE_6__* @DatumGetIntervalP(i32) #1

declare dso_local i32 @DirectFunctionCall1(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
